--- a/STUDY/오서하/Voice/pom.xml
+++ b/STUDY/오서하/Voice/pom.xml
@@ -44,6 +44,14 @@
             <artifactId>spring-boot-starter-data-redis</artifactId>
             <version>2.6.4</version>
         </dependency>
+        <!-- https://mvnrepository.com/artifact/org.projectlombok/lombok -->
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>1.18.20</version>
+            <scope>provided</scope>
+        </dependency>
+
 
     </dependencies>
     <build>
