feat: 🎸 update entity

--- a/Unsung/build.gradle
+++ b/Unsung/build.gradle
@@ -34,3 +34,9 @@ dependencies {
 tasks.named('test') {
 	useJUnitPlatform()
 }
+
+bootJar{
+	archivesBaseName = 'unsung'
+	archiveFileName = 'unsung.jar'
+	archiveVersion = "0.0.1"
+}
