--- a/Unsung/build.gradle
+++ b/Unsung/build.gradle
@@ -24,6 +24,7 @@ dependencies {
 	implementation 'io.springfox:springfox-swagger2:2.6.1'
 	implementation 'io.springfox:springfox-swagger-ui:2.6.1'
 	implementation group: 'org.jsoup', name: 'jsoup', version: '1.13.1'
+	implementation group: 'com.googlecode.json-simple', name: 'json-simple', version: '1.1.1'
 	
 	compileOnly 'org.projectlombok:lombok'
 	developmentOnly 'org.springframework.boot:spring-boot-devtools'
