--- a/FE/package.json
+++ b/FE/package.json
@@ -9,12 +9,15 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "apexcharts": "^3.35.0",
     "axios": "^0.26.1",
-    "chart.js": "^3.5.0",
+    "chart.js": "^2.9.4",
     "d3": "^7.4.0",
     "d3-cloud": "^1.2.5",
+    "install": "^0.13.0",
     "randomcolor": "^0.6.2",
     "vue": "^2.6.11",
+    "vue-apexcharts": "^1.6.2",
     "vue-axios": "^3.4.1",
     "vue-chartjs": "^3.5.1",
     "vue-router": "^3.1.6",
