--- a/FE/package.json
+++ b/FE/package.json
@@ -21,6 +21,7 @@
     "vue-axios": "^3.4.1",
     "vue-chartjs": "^3.5.1",
     "vue-router": "^3.1.6",
+    "vue-wordcloud": "^1.1.1",
     "vuetify": "^2.2.23",
     "vuewordcloud": "^18.7.12",
     "vuex": "^3.6.2",
